--- a/Gamesneeze/cfg.ini
+++ b/Gamesneeze/cfg.ini
@@ -1,8 +1,8 @@
 [Connection Info]
 
-token = NzY5MDE3Mjc2NTAyMjQ1Mzg0.X5I5Jg.2w462ajGQ7xRRaf1Tiiq_bMped0
-mongo_username = admin
-mongo_password = aCiqvMVHyWIZSQwW
+token = Bot Token Here
+mongo_username = Mongo Username Here
+mongo_password = Mongo Password Here
 
 [Bot Arguments]
 
